--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,7 +4,16 @@ spring:
     url: jdbc:mariadb://localhost:3306/member
     username: root
     password: 1234
+  jpa:
+    properties:
+      hibernate:
+        show_sql: true
+        globally_quoted_identifiers: true
+        format_sql: true
+    open-in-view: false
+    hibernate:
+      ddl-auto: none
 
 logging:
   level:
-    root: trace
+    root: debug
